--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://jasimbdpro.github.io/ema-john-simple/",
   "name": "recap",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
