--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-vite-ema-john-simple",
+  "name": "ema-john-simple",
   "private": true,
   "version": "0.0.0",
   "type": "module",
